:x: Change about page, num of cols & rows on logs, actions as dropdown button

--- a/src/client/src/app/components/about/about.component.html
+++ b/src/client/src/app/components/about/about.component.html
@@ -1,50 +1,47 @@
 <div class="container" data-aos="zoom-out-right" data-aos-duration="500">
   <div class="card">
     <div class="card-body">
-      <div class="text-center">
-        <img
-          src="assets/images/logo.png"
-          class="shadow-2 rounded-circle"
-          alt="logo"
-          style="width: 230px"
-        />
-        <blockquote class="note note-primary border w-75 m-auto mt-2 mb-2 p-1">
-          <h4 class="fw-bold">Docker Dashboard</h4>
-          "A simple lightweight application that makes managing containers &
-          images on Docker easy!""
-        </blockquote>
-
-        <a
-          class="m-1 btn btn-dark btn-rounded text-capitalize"
-          href="https://github.com/AbduazizZiyodov/docker-dashboard"
-          target="_blank"
-        >
-          <i class="fab fa-github-alt"></i> Github
-        </a>
-
-        <a
-          type="button"
-          class="m-1 btn dodger-blue-bg btn-rounded text-capitalize"
-          href="https://t.me/AbduazizPy"
-          target="_blank"
-        >
-          <i class="fab fa-telegram-plane"></i> Telegram
-        </a>
+      <div class="row p-1">
+        <div class="col-2">
+          <img
+            src="assets/images/logo.png"
+            class="shadow-2 rounded-circle"
+            alt="logo"
+            style="width: 150px"
+          />
+          <br />
+        </div>
+        <div class="col-10">
+          <blockquote
+            class="note note-primary border w-75 m-auto mt-2 mb-2 p-1"
+          >
+            <h4 class="fw-bold">Docker Dashboard</h4>
+            "A simple lightweight application that makes managing containers &
+            images on Docker easy!""
+          </blockquote>
+        </div>
       </div>
+
       <hr />
 
-      <h3>Used technologies (libraries & frameworks):</h3>
-      <h5 class="fw-bold"><i class="fas fa-server text-success"></i> Server</h5>
-      <blockquote class="note note-success border w-75">
-        Starlette , Docker-SDK , Typer , Pytest , Pydantic
-      </blockquote>
-      <h5 class="fw-bold">
-        <i class="<p> fas fa-desktop text-warning"></i> Client
-      </h5>
-      <blockquote class="note note-warning border w-75">
-        Angular, Electron JS, Ngx-toastr, Mdb-angular-ui-kit, AOS JS,
-        fontawesome
-      </blockquote>
+      <div class="row">
+        <div class="col-5">
+          <span class="fw-bold">
+            <i class="fas fa-server text-success"></i> Server
+          </span>
+          <blockquote class="note note-success border w-75">
+            Starlette , Docker-SDK , Typer , Pytest , Pydantic
+          </blockquote>
+        </div>
+        <div class="col-7">
+          <span class="fw-bold">
+            <i class="<p> fas fa-desktop text-warning"></i> Client
+          </span>
+          <blockquote class="note note-warning border w-75">
+            Angular, Electron JS, Ngx-toastr, Mdb-angular, AOS JS, Fontawesome
+          </blockquote>
+        </div>
+      </div>
     </div>
   </div>
 </div>
