Match width with windows size, remove select (tag, registry api deprecated)

--- a/src/client/src/app/core/image/image-detailed/image-detailed.component.html
+++ b/src/client/src/app/core/image/image-detailed/image-detailed.component.html
@@ -1,4 +1,4 @@
-<div class="container p-5">
+<div class="container">
   <div *ngIf="isLoading" class="text-center mt-3">
     <div class="spinner-border dodger-blue" role="status">
       <span class="visually-hidden">Loading...</span>
@@ -8,11 +8,11 @@
   </div>
   <div *ngIf="!isLoading" class="row">
     <div class="col-md-6 m-auto">
-      <div class="card m-2" data-aos="zoom-out" data-aos-duration="500">
+      <div class="card" data-aos="zoom-out" data-aos-duration="500">
         <img
           src="assets/images/docker-logo.png"
           class="card-img-top rounded-circle shadow-2"
-          style="width: 200px; margin: auto"
+          style="width: 100px; margin: auto"
         />
 
         <div class="card-body">
@@ -21,29 +21,13 @@
             <i *ngIf="!image.is_official" class="fas fa-cube"></i>
             {{ image.name }}:{{ image.tag }}
           </h4>
-          <div class="shadow-1 rounded p-2 mb-1 mt-1">
-            <h5 class="text-center h5-responsive">
+          <div class="shadow-1 text-center rounded mb-1 mt-1">
+            <span>
               {{ image.description?.replace(".", "") }}
-            </h5>
+            </span>
           </div>
 
-          <ul class="list-group mb-1">
-            <li class="list-group-item">
-              <div class="row">
-                <div class="col-md-6">
-                  <span class="text-warning fw-bold">Short ID:</span>
-                </div>
-                <div class="col-md-6">
-                  <button
-                    class="btn btn-rounded btn-warning text-lowercase p-2"
-                    (click)="copyId(image.short_id)"
-                  >
-                    <i class="fas fa-clone"></i> {{ image.short_id }}
-                  </button>
-                </div>
-              </div>
-            </li>
-
+          <ul class="list-group">
             <li class="list-group-item">
               <div class="row">
                 <div class="col-md-6">
