--- a/src/client/src/app/core/image/pull-image/pull-image.component.html
+++ b/src/client/src/app/core/image/pull-image/pull-image.component.html
@@ -27,16 +27,20 @@
 
         <blockquote
           *ngIf="imageInfo?.description"
-          class="note note-primary border text-center w-75 m-auto mb-2"
+          class="note note-primary border text-center m-auto mb-2"
         >
           {{ imageInfo?.description }}
         </blockquote>
 
         <ul class="list-group list-group-light">
           <span class="fw-bold">Pulled versions:</span>
-          <li class="list-group-item" *ngIf="pulledVersions.length == 0">
+          <li
+            class="list-group-item text-center"
+            *ngIf="pulledVersions.length == 0"
+          >
             You have not pulled any version of the
-            <code>{{ repository }}</code> docker image ...
+            <code>{{ repository }}</code
+            >.
           </li>
           <li
             class="list-group-item"
@@ -50,13 +54,16 @@
         </ul>
 
         <div class="mt-3 p-1 m-auto text-center">
-          <ng-select
-            [items]="tags"
-            [(ngModel)]="selectedTag"
-            placeholder="Image tag"
-            style="width: 30%; margin: auto"
-          >
-          </ng-select>
+          <mdb-form-control style="width: 30%; margin: auto">
+            <input
+              mdbInput
+              type="text"
+              [(ngModel)]="selectedTag"
+              id="tag-input"
+              class="form-control"
+            />
+            <label mdbLabel class="form-label" for="tag-input">Tag:</label>
+          </mdb-form-control>
 
           <button
             class="btn btn-warning text-capitalize mt-2"
