Remove text from menu, edit image size, remove get tags method (img service)

--- a/src/client/src/app/core/menu/menu.component.html
+++ b/src/client/src/app/core/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-2 p-3">
+<div class="container mt-1">
   <div
     class="row"
     data-aos="fade-up"
@@ -12,26 +12,20 @@
           <img
             src="assets/images/docker.png"
             class="img-fluid rounded-pill img-thumbnail"
-            width="750px"
+            width="500px"
             alt=""
           />
         </div>
 
-        <div class="border p-3 mt-2">
+        <div class="border p-2">
           <p>
             Thanks for using <strong>Docker Dashboard!</strong> I hope this
-            application will help with your development process. Now the
-            application has basic functionality and I have great plans for the
-            future. If you want to support my work, just star on this GitHub
-            repository and share this with your friends. Also, I opened a
+            application will help with your development process. I opened a
             discussion on GitHub. I would be very happy if you write any ideas,
             feedback & suggestions.
           </p>
           <figcaption class="blockquote-footer">Abduaziz Ziyodov</figcaption>
         </div>
-        <p class="mt-2 p-3 text-center">
-          Choose any section from the left & start to manage your resources!
-        </p>
       </div>
     </div>
   </div>
