Update: rename components, swap menu and welcome component logic

--- a/src/client/src/app/app.component.html
+++ b/src/client/src/app/app.component.html
@@ -1,21 +1,1 @@
-<app-header></app-header>
-
-<div class="content">
-  <div class="row">
-    <div class="col">
-      <button
-        class="btn btn-sm btn-success float-start rounded m-3"
-        (click)="back()"
-      >
-      <i class="fas fa-arrow-left"></i>
-      </button>
-      <button
-        class="btn btn-sm btn-success float-end rounded m-3"
-        (click)="next()"
-      >
-      <i class="fas fa-arrow-right"></i>
-      </button>
-    </div>
-  </div>
-  <router-outlet></router-outlet>
-</div>
+<app-menu></app-menu>
