Update about page, fix cols

--- a/src/client/src/app/components/about/about.component.html
+++ b/src/client/src/app/components/about/about.component.html
@@ -16,8 +16,7 @@
             class="note note-primary border w-75 m-auto mt-2 mb-2 p-1"
           >
             <h4 class="fw-bold">Docker Dashboard</h4>
-            "A simple lightweight application that makes managing containers &
-            images on Docker easy!""
+            "Simple lightweight GUI application for working with Docker"
           </blockquote>
         </div>
       </div>
@@ -25,20 +24,20 @@
       <hr />
 
       <div class="row">
-        <div class="col-5">
+        <div class="col-6">
           <span class="fw-bold">
             <i class="fas fa-server text-success"></i> Server
           </span>
-          <blockquote class="note note-success border w-75">
-            Starlette , Docker-SDK , Typer , Pytest , Pydantic
+          <blockquote class="note note-success border">
+            Starlette , Docker-SDK , Websockets, Pydantic, Supervisord
           </blockquote>
         </div>
-        <div class="col-7">
+        <div class="col-6">
           <span class="fw-bold">
             <i class="<p> fas fa-desktop text-warning"></i> Client
           </span>
-          <blockquote class="note note-warning border w-75">
-            Angular, Electron JS, Ngx-toastr, Mdb-angular, AOS JS, Fontawesome
+          <blockquote class="note note-warning border">
+            Angular, Tauri(rust), Mdb-angular, Ngx-toastr, AOS JS, Fontawesome
           </blockquote>
         </div>
       </div>
