--- a/src/client/src/app/core/image/image-list/image-list.component.html
+++ b/src/client/src/app/core/image/image-list/image-list.component.html
@@ -1,5 +1,5 @@
 <h1
-  class="dodger-blue mt-3 text-center fw-bold"
+  class="dodger-blue mt-1 text-center fw-bold"
   data-aos="fade-down"
   data-aos-duration="500"
 >
@@ -11,20 +11,6 @@
     <i class="fas fa-cloud-download-alt"></i> Pull
   </button>
 </h1>
-
-<div class="form-check form-switch">
-  <input
-    mdbCheckbox
-    #switch
-    class="form-check-input"
-    type="checkbox"
-    id="flexSwitchCheckDefault"
-  />
-  <label class="form-check-label" for="flexSwitchCheckDefault"
-    ><i class="fas fa-list" style="color: gray"></i> List view</label
-  ><br />
-  Total: <span class="text-success fw-bold">{{ images.length }}</span> images
-</div>
 
 <div *ngIf="images.length == 0" class="card m-auto w-50">
   <div class="card-body">
@@ -39,44 +25,13 @@
   </div>
 </div>
 
-<div class="container p-3" *ngIf="switch.checked">
-  <div
-    class="card m-3 w-50 mb-3 m-auto"
-    *ngFor="for; let image; of: images"
-    data-aos="zoom-out"
-    data-aos-duration="500"
-  >
-    <div class="card-body">
-      <h5 class="card-title dodger-blue">
-        <i class="fas fa-cube"></i> {{ image.name + ":" + image.tag }}
-      </h5>
-      <div class="row">
-        <div class="col-md-6">
-          {{ image.short_id }}
-        </div>
-        <div class="col-md-6">
-          <div class="float-end">
-            <button
-              class="btn dodger-blue-bg text-white"
-              routerLink="/images/{{ image.short_id }}"
-            >
-              Go
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div
-  class="container p-3"
-  data-aos="zoom-out"
-  data-aos-duration="500"
-  *ngIf="!switch.checked"
->
+<div class="container p-3" data-aos="zoom-out" data-aos-duration="500">
   <div class="card w-75 m-auto">
     <div class="card-body">
+      <div class="total-images p-1">
+        <strong>Total</strong>:
+        <span class="text-success fw-bold">{{ images.length }}</span> images
+      </div>
       <table
         *ngIf="images.length != 0"
         class="table align-middle mb-0 bg-white"
