Update: replace div with li, move styles to global styles

--- a/src/client/src/app/core/image/pull-list/pull-list.component.html
+++ b/src/client/src/app/core/image/pull-list/pull-list.component.html
@@ -29,7 +29,7 @@
       </blockquote>
 
       <ul class="list-group list-group-light">
-        <div class="list-group-item m-auto" *ngFor="let task of tasks">
+        <li class="list-group-item m-auto" *ngFor="let task of tasks">
           <p>
             <span class="fw-bold">{{ task.repository }}</span>
 
@@ -73,7 +73,7 @@
             >
             </textarea>
           </div>
-        </div>
+        </li>
       </ul>
     </div>
   </div>
