--- a/src/client/src/styles.scss
+++ b/src/client/src/styles.scss
@@ -39,9 +39,18 @@
   text-transform: capitalize;
 }
 
-
-
-
-body {
-  overflow-x: hidden;
+textarea {
+  resize: none;
+  width: 100%;
+  padding: 8px;
+  color: white;
+  font-size: 15px;
+  margin-bottom: 5px;
+  font-family: "mono";
+  border-radius: 10px;
+  white-space: pre-line;
+  border: 10px solid rgb(41, 41, 41);
+  background-color: rgb(41, 41, 41);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
