--- a/src/client/src/app/core/menu/menu.component.scss
+++ b/src/client/src/app/core/menu/menu.component.scss
@@ -1,9 +1,9 @@
 .sidebar {
-  width: 200px;
+  margin-top: 10px;
+  width: 170px;
   height: 100vh;
   overflow: auto;
   position: fixed;
-  margin-top: 40px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
   transition: 0.1s;
@@ -17,28 +17,29 @@
   cursor: pointer;
 }
 
+ul {
+  list-style-type: none;
+  padding: 10px;
+}
+
 li {
   border: none;
 }
 
 .hide-btn {
-  padding: 5px 10px;
-  margin-top: 10px;
+  position: relative;
+  padding: 3px 7px;
   transition: 0.1s;
+  margin: 5px;
   cursor: pointer;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07),
-    0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  border-radius: 50%;
+  box-shadow: 0 1px 1px 0px rgba(0, 0, 0, 0.05),
+    0 2px 2px 1px rgba(0, 0, 0, 0.05);
 }
 
 .hide-btn:hover {
   color: gray;
 }
 
-
 .content {
-  margin-top: 55px;
-  margin-left: 200px;
-  padding: 20px 20px;
+  margin-left: 170px;
 }
-
