Refactoring container list component, logs component

--- a/src/client/src/app/core/container/container-list/container-list.component.html
+++ b/src/client/src/app/core/container/container-list/container-list.component.html
@@ -41,7 +41,7 @@
               <span
                 class="text-capitalize p-2 badge badge-{{
                   getStatus(container.status)
-                }} rounded-pill d-inline"
+                }} rounded-pill d-inline container-status"
               >
                 {{ container.status }}</span
               >
